<resources>
    <string name="package_name">com.example.storyapp</string>
    <string name="app_name">Story App</string>
    <string name="select_photo">Select photo</string>
    <string name="from_galeri">From Galeri</string>
    <string name="take_picture">Take Picture</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Photo</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="posted_at">Posted at:</string>
    <string name="shared_photo">Shared photo</string>
    <string name="login">Login</string>
    <string name="icon_email">Icon email</string>
    <string name="email">Email</string>
    <string name="icon_lock">Icon lock</string>
    <string name="password">Password</string>
    <string name="or_sign_in">or Sign in</string>
    <string name="register">Register</string>
    <string name="person">Person</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="flat_illustration">Flat illustration</string>
    <string name="welcome_to_mystoryapp">Welcome to MyStoryApp</string>

    <string name="post_as">Post story as </string>
    <string name="choose_picture">Choose a picture</string>
    <string name="input_picture">Please input picture</string>
    <string name="input_des">Please input description</string>
    <string name="share_story">Share your story</string>
    <string name="detail_title">%1$s\'s Story</string>


    <string name="you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="input_email">Please input your email here</string>
    <string name="input_pass">Please input your password here</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_password">Password is invalid</string>

    <string name="email_required">Email is required</string>
    <string name="name_required">Name is required</string>
    <string name="password_required">Password is required</string>
    <string name="cpass_required">Confirm password is required</string>
    <string name="pass_length">Password must be 6 characters long</string>
    <string name="pass_not_match">Password not match</string>

    <string name="timeout">Timeout!! please try again later</string>
    <string name="email_taken">Email is already taken</string>
    <string name="unauthorized">Email or password might be wrong</string>
    <string name="user_created">User created</string>
    <string name="success_login">Login successfully. Message:</string>
    <string name="error_message">Error message :</string>
    <string name="message">Message  :</string>
    <string name="success_load">Load successfully. Message:</string>
    <string name="error_load">Failed to load. Message:</string>

    <string name="see_password">See password</string>
    <string name="floatin_button">Floating button</string>
    <string name="ini_splash">it\'s splash screen</string>
    <string name="no_location_data">No location data</string>
    <string name="no_location">No location</string>
    <string name="location_name_unknown">Location name unknown</string>
    <string name="no_current_location">No current location</string>
    <string name="my_location">My location</string>
    <string name="title_activity_maps">Maps</string>
    <string name="see_on_map">See on maps</string>
    <string name="pick_place">Pick Place</string>
    <string name="use_this_location">Use this location?</string>

    <string name="retry">Retry</string>
    <string name="icon_map_pin">Icon map pin</string>
    <string name="location">Location</string>
    <string name="use_current_location">Use current location</string>
    <string name="normal_maps">Normal maps</string>
    <string name="satelite_maps">Satellite maps</string>
    <string name="terrain_maps">Terrain maps</string>
    <string name="hybrid_maps">Hybrid Maps</string>
    <string name="ups_something_went_wrong">Ups…something went wrong</string>

    <string name="date">%1$s/%2$s/%3$s</string>
    <string name="click_on_map_to_pick_place">Click on map to pick place</string>


</resources>