<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        tools:context=".ui.DetailActivity">


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:transitionName="name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="name" />

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/et_des"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <ImageView
                android:id="@+id/bt_add_location"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_pin_drop_24"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="Location"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/ll_location"
            tools:text="description" />

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/shared_photo"
            android:transitionName="photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_des"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_posted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:alpha="0.5"
            android:text="@string/posted_at"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@id/tv_date"
            app:layout_constraintTop_toTopOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:alpha="0.5"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/img_photo"
            app:layout_constraintTop_toBottomOf="@id/img_photo"
            tools:text="date" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>